                    __   __                  _             
                    \ \ / /_ _ ___ _ __ ___ (_)_ __   __ _ 
                     \ V / _` / __| '_ ` _ \| | '_ \ / _` |
                      | | (_| \__ \ | | | | | | | | | (_| |
                      |_|\__,_|___/_| |_| |_|_|_| |_|\__,_|
                      http://service-technology.org/yasmina


Version 1.1-unreleased
======================

Version 1.0 (18 January 2009)
=============================

* first official release of Yasmina

* compatibility with Linda varying length fingerprints fixed

* improved final marking handling

Version 0.4-unreleased (October 2009)
=====================================

* added testcases

* added documentation

* added scripts to use LCOV (`http://ltp.sourceforge.net/coverage/lcov.php')
  to determine test case coverage (use `make cover' in `tests' directory)

* added manpage


