@@ -11,7 +11,7 @@ AC_MSG_NOTICE([\ \ / /_ _ ___ _ __ ___ (_)_ __   __ _ ])
 AC_MSG_NOTICE([ \ V / _` / __| '_ ` _ \| | '_ \ / _` |])
 AC_MSG_NOTICE([  | | (_| \__ \ | | | | | | | | | (_| |])
 AC_MSG_NOTICE([  |_|\__,_|___/_| |_| |_|_|_| |_|\__,_|])
-# AC_MSG_NOTICE([synthesizing partners for services])
+# AC_MSG_NOTICE([checking compatibility using ILP])
 AC_MSG_NOTICE([http://service-technology.org/yasmina])
 AC_MSG_NOTICE([version ${PACKAGE_VERSION}])
 AC_MSG_NOTICE()
